--- a/feed.html
+++ b/feed.html
@@ -4,7 +4,7 @@
 <head>
   <title>Fake Insta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/css/style.css' />
+  <link rel='stylesheet' href='css/style.css' />
 </head>
 
 <body>
@@ -38,13 +38,13 @@
     <div class="card" id="">
       <div class="card-header">
         <div>
-          <img class="avatar" src="/img/avatar-example.png">
+          <img class="avatar" src="img/avatar-example.png">
           <b>Ana Paula</b>
         </div>
-        <img src="/img/icons/more-vertical.svg">
+        <img src="img/icons/more-vertical.svg">
       </div>
       <div class="card-img">
-        <img src="/img/publication_example.jpg">
+        <img src="img/publication_example.jpg">
       </div>
       <div class="card-body">
         <div class="card-itens">
