--- a/feed.html
+++ b/feed.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container header">
       <div id="logo">
-        <img src="/img/logo.png">
+        <img src="img/logo.png">
       </div>
       <div class="busca">
         <form>
@@ -19,15 +19,15 @@
         </form>
       </div>
       <nav>
-        <a href="/publicar">
-          <img src="/img/icons/plus.svg" alt="Adicionar Publicação" title="Adicionar Publicação">
+        <a href="publicar">
+          <img src="img/icons/plus.svg" alt="Adicionar Publicação" title="Adicionar Publicação">
         </a>
-        <a href="/home">
-          <img src="/img/icons/home.svg">
+        <a href="home">
+          <img src="img/icons/home.svg">
         </a>
         <a href="">
           <div class="avatar-content">
-            <img class="avatar" src="/img/avatar-example.png">
+            <img class="avatar" src="img/avatar-example.png">
             <b>Nome do Usuário</b>
           </div>
         </a>
